Cabe's changes for the pop-up windows and to add and remove a group.
