# routes/groups.js
@@ -17,4 +17,9 @@ router.put('/:id', groupController.updateGroup);
 //Delete group
 router.delete('/:id', groupController.deleteGroup);
 
+//Button to create group
+router.post('/btnCreateGroup', groupController.btnCreateGroup);
+
+router.post('/deleteGroupBtn', groupController.deleteBtnGroup);
+
 module.exports = router;
